--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-EXPO_PUBLIC_COMFYU_API_URL="http://localhost:8000"
-
+EXPO_PUBLIC_COMFYU_API_URL="http://192.168.0.4:8000"
 
 EXPO_PUBLIC_S3_REGION="us-east-1"
 EXPO_PUBLIC_S3_ACCESS_KEY="AKIA3RHAOFAVDCQQSTXW"
